WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27705
Fix Chromium build breakage introduced in 46388
https://bugs.webkit.org/show_bug.cgi?id=27705
Summary
Fix Chromium build breakage introduced in 46388
Pavel Feldman
Reported
2009-07-27 04:35:16 PDT
Fix Chromium build breakage introduced in 46388
Attachments
build fix
(1.91 KB, patch)
2009-07-27 04:37 PDT
,
Pavel Feldman
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2009-07-27 04:37:01 PDT
Created
attachment 33533
[details]
build fix
Adam Roben (:aroben)
Comment 2
2009-07-27 08:06:31 PDT
Comment on
attachment 33533
[details]
build fix r=me
Pavel Feldman
Comment 3
2009-07-27 08:09:50 PDT
M WebCore/ChangeLog M WebCore/platform/graphics/chromium/FontPlatformDataChromiumWin.cpp M WebCore/platform/graphics/chromium/FontPlatformDataChromiumWin.h
r46417
= d69689806904fd1056f8c1ca791ff73b57ce9740 (trunk)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug