2009-07-27  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Adam Roben.

        Fix Chromium build breakage introduced in 46388.

        https://bugs.webkit.org/show_bug.cgi?id=27705

        * platform/graphics/chromium/FontPlatformDataChromiumWin.cpp:
        (WebCore::FontPlatformData::description):
        * platform/graphics/chromium/FontPlatformDataChromiumWin.h:


Canonical link: https://commits.webkit.org/38027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46417 268f45cc-cd09-0410-ab3c-d52691b4dbfc