WebCore/platform/graphics/chromium/FontPlatformDataChromiumWin.cpp
@@ -153,4 +153,11 @@ SCRIPT_FONTPROPERTIES* FontPlatformData::scriptFontProperties() const
     return m_scriptFontProperties;
 }
 
+#ifndef NDEBUG
+String FontPlatformData::description() const
+{
+    return String();
+}
+#endif
+
 }
